// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building association extension source map should have source map data 1`] = `
Object {
  "allowPrimaryKeyUpdates": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntity": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "baseEntityName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "baseEntityNamespaceName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "documentation": Object {
    "column": 0,
    "line": 0,
    "tokenText": "NoSourceMap",
  },
  "identityProperties": Array [],
  "metaEdId": Object {
    "column": 35,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 14,
    "line": 2,
    "tokenText": "EntityName",
  },
  "properties": Array [],
  "queryableFields": Array [],
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Association",
  },
}
`;

exports[`when building association extension with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 7, token: TrailingText",
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain', 'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'is queryable field', 'min value', 'max value', 'with context'}, column: 0, line: 7, token: TrailingText",
]
`;

exports[`when building association extension with lowercase association extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
  "no viable alternative at input 'Associatione', column: 14, line: 2, token: e",
]
`;

exports[`when building association extension with no association extension name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Associationadditions', column: 15, line: 2, token: additions",
  "no viable alternative at input 'Associationadditions', column: 15, line: 2, token: additions",
]
`;

exports[`when building association extension with no property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 3, token: End Namespace",
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'datetime', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year'}, column: 0, line: 3, token: End Namespace",
]
`;

exports[`when building duplicate association extensions should have validation failures for each entity: when building duplicate association extensions should have validation failures for each entity -> Association 1 message 1`] = `"Association Extension named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate association extensions should have validation failures for each entity: when building duplicate association extensions should have validation failures for each entity -> Association 1 sourceMap 1`] = `
Object {
  "column": 14,
  "line": 7,
  "tokenText": "EntityName",
}
`;

exports[`when building duplicate association extensions should have validation failures for each entity: when building duplicate association extensions should have validation failures for each entity -> Association 2 message 1`] = `"Association Extension named EntityName is a duplicate declaration of that name."`;

exports[`when building duplicate association extensions should have validation failures for each entity: when building duplicate association extensions should have validation failures for each entity -> Association 2 sourceMap 1`] = `
Object {
  "column": 14,
  "line": 2,
  "tokenText": "EntityName",
}
`;
